--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,5 +1,8 @@
 html {
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 17px;
+  background-color: #333;
 }
 *,
 *::before,
@@ -15,7 +18,75 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+h2{
+  margin:0 40px;
+}
+form{
+  display:flex;
+  flex-direction: column;
+  margin:0 40px;
+  width:400px;
+}
+.error{
+  color:red;
+}
 
+input{
+  margin:0;
+  /* margin-bottom: 20px; */
+  font-size: 15px;
+  height:40px;
+  width:425px;
+  color:white;
+  background-color: #333;
+  border:1px solid white;
+  padding-left: 10px;
+}
+
+input::placeholder{
+  font-style: italic;
+}
+
+input:focus{
+  outline: none;
+}
+
+
+div.form{
+  width:500px;
+  margin:auto;
+  background-color: #333;
+  color:white;
+  font-weight: bold;
+}
+
+div.thanks{
+  width:100%;
+  margin:0;
+  background-color: #333;
+  color:white;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+label{
+  padding: 0;
+  margin:0;
+}
+.btn{
+  width:200px;
+  height:40px;
+  align-items: center;
+  color:white;
+  border:1px solid white;
+  background-color: #333;
+}
+.btn:focus{
+  outline: none;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
